Improve heading hierarchy and semantics

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
 <section class="w-full h-[400px] bg-[#5e5c5a] flex flex-col items-center justify-center text-center px-4">
 <img width="800" height="600" alt="Velvet Touch Logo" class="h-3/5 object-contain mb-4" loading="lazy" src="img/logo.webp"/>
 <h2 class="text-base sm:text-lg md:text-xl font-light tracking-widest uppercase text-white leading-tight">
-    Luxury European Spa Massage Center in JBR Dubai 
+    European Spa Sanctuary with Complimentary Valet Parking
   </h2>
 <div class="bg-black py-3 px-6 rounded-full inline-block mt-4">
 <p class="text-white text-xl font-semibold">Complimentary Valet Parking</p>
@@ -498,9 +498,9 @@
 <span class="hidden sm:block h-px w-24 bg-white/15"></span>
 </div>
 <!-- big title -->
-<p class="font-[Playfair_Display] text-[#D4AF37] text-4xl md:text-6xl leading-tight">
-      Velvet Touch Spa
-</p>
+<h2 class="font-[Playfair_Display] text-[#D4AF37] text-4xl md:text-6xl leading-tight">
+      Experience Velvet Touch Spa
+    </h2>
 <!-- description -->
 <p class="mt-6 md:mt-8 text-white/70 text-lg md:text-2xl max-w-4xl mx-auto">
       We take pride in our team of experienced Russian and Ukrainian massage
@@ -511,8 +511,12 @@
 </section>
 <!-- New Therapist Slider -->
 <section class="py-16 bg-[#f8f5f0] dark:bg-[#2b2b2b] transition-colors duration-300" id="therapists">
-<div class="max-w-7xl mx-auto px-4 relative">
-<div class="relative">
+  <div class="max-w-7xl mx-auto px-4 relative">
+    <div class="mb-12 text-center space-y-4">
+      <h2 class="text-3xl md:text-4xl font-bold text-gray-900 dark:text-white">Our European Massage Therapists</h2>
+      <p class="text-lg text-gray-700 dark:text-gray-300 max-w-3xl mx-auto">Meet the professionals delivering our signature spa rituals in JBR. Each therapist blends European techniques with personalised care.</p>
+    </div>
+    <div class="relative">
 <button aria-label="Previous therapist" class="therapist-nav-btn therapist-nav-btn--prev" id="therapist-prev" type="button">
 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 <path d="M15 19l-7-7 7-7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
@@ -526,7 +530,7 @@
           </div>
           <div class="mt-4 text-center">
             <div class="text-sm text-gray-500 dark:text-gray-400">Swedish Relax Massage Expert</div>
-            <h3 class="text-xl font-bold text-gray-900 dark:text-white mt-1">Eva</h3>
+            <p class="text-xl font-bold text-gray-900 dark:text-white mt-1">Eva</p>
           </div>
         </div>-->
 <!-- Карточка 3 -->
@@ -536,7 +540,7 @@
 </div>
 <div class="mt-4 text-center">
 <div class="text-sm text-gray-500 dark:text-gray-400">From Russia</div>
-<h3 class="text-xl font-bold text-gray-900 dark:text-white mt-1">Natali</h3>
+<p class="text-xl font-bold text-gray-900 dark:text-white mt-1">Natali</p>
 </div>
 </div>
 <!-- Карточка 4 -->
@@ -546,7 +550,7 @@
 </div>
 <div class="mt-4 text-center">
 <div class="text-sm text-gray-500 dark:text-gray-400">From Ukraine</div>
-<h3 class="text-xl font-bold text-gray-900 dark:text-white mt-1">Vlada</h3>
+<p class="text-xl font-bold text-gray-900 dark:text-white mt-1">Vlada</p>
 </div>
 </div>
 <!-- Карточка 5 -->
@@ -564,7 +568,7 @@
 </div>
 <div class="mt-4 text-center">
 <div class="text-sm text-gray-500 dark:text-gray-400">From Russia</div>
-<h3 class="text-xl font-bold text-gray-900 dark:text-white mt-1">Emma</h3>
+<p class="text-xl font-bold text-gray-900 dark:text-white mt-1">Emma</p>
 </div>
 </div>
 <!-- Карточка 2 
@@ -574,7 +578,7 @@
 </div>
 <div class="mt-4 text-center">
 <div class="text-sm text-gray-500 dark:text-gray-400">From Russia</div>
-<h3 class="text-xl font-bold text-gray-900 dark:text-white mt-1">Carolina</h3>
+<p class="text-xl font-bold text-gray-900 dark:text-white mt-1">Carolina</p>
 </div>
 </div>-->
 <!-- Карточка 10 
@@ -584,7 +588,7 @@
 </div>
 <div class="mt-4 text-center">
 <div class="text-sm text-gray-500 dark:text-gray-400">From Russia</div>
-<h3 class="text-xl font-bold text-gray-900 dark:text-white mt-1">Elsa</h3>
+<p class="text-xl font-bold text-gray-900 dark:text-white mt-1">Elsa</p>
 </div>
 </div>-->
 <!-- Карточка 7 -->
@@ -594,7 +598,7 @@
 </div>
 <div class="mt-4 text-center">
 <div class="text-sm text-gray-500 dark:text-gray-400">From Ukraine</div>
-<h3 class="text-xl font-bold text-gray-900 dark:text-white mt-1">Yana</h3>
+<p class="text-xl font-bold text-gray-900 dark:text-white mt-1">Yana</p>
 </div>
 </div>
 <!-- Карточка 8 -->
@@ -604,7 +608,7 @@
 </div>
 <div class="mt-4 text-center">
 <div class="text-sm text-gray-500 dark:text-gray-400">From Russia</div>
-<h3 class="text-xl font-bold text-gray-900 dark:text-white mt-1">Masha</h3>
+<p class="text-xl font-bold text-gray-900 dark:text-white mt-1">Masha</p>
 </div>
 </div>
 <!-- Карточка 9 -->
@@ -614,7 +618,7 @@
 </div>
 <div class="mt-4 text-center">
 <div class="text-sm text-gray-500 dark:text-gray-400">From Ukraine</div>
-<h3 class="text-xl font-bold text-gray-900 dark:text-white mt-1">Vika</h3>
+<p class="text-xl font-bold text-gray-900 dark:text-white mt-1">Vika</p>
 </div>
 </div>
 <!-- Карточка 6 -->
@@ -624,7 +628,7 @@
 </div>
 <div class="mt-4 text-center">
 <div class="text-sm text-gray-500 dark:text-gray-400">From Russia</div>
-<h3 class="text-xl font-bold text-gray-900 dark:text-white mt-1">Nikol</h3>
+<p class="text-xl font-bold text-gray-900 dark:text-white mt-1">Nikol</p>
 </div>
 </div>
 <!-- Карточка 11 -->
@@ -634,7 +638,7 @@
 </div>
 <div class="mt-4 text-center">
 <div class="text-sm text-gray-500 dark:text-gray-400">From Ukraine</div>
-<h3 class="text-xl font-bold text-gray-900 dark:text-white mt-1">Rina</h3>
+<p class="text-xl font-bold text-gray-900 dark:text-white mt-1">Rina</p>
 </div>
 </div>
 <!-- Карточка 12 -->
@@ -644,7 +648,7 @@
 </div>
 <div class="mt-4 text-center">
 <div class="text-sm text-gray-500 dark:text-gray-400">From Russia</div>
-<h3 class="text-xl font-bold text-gray-900 dark:text-white mt-1">Jenya</h3>
+<p class="text-xl font-bold text-gray-900 dark:text-white mt-1">Jenya</p>
 </div>
 </div>
 </div>
@@ -657,8 +661,12 @@
 </div>
 </section>
 <section class="py-16 bg-[#f8f5f0] dark:bg-[#2b2b2b] transition-colors duration-500" id="services">
-<div class="max-w-7xl mx-auto px-4">
-<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+  <div class="max-w-7xl mx-auto px-4">
+    <div class="max-w-3xl mx-auto text-center mb-12 space-y-4">
+      <h2 class="text-3xl md:text-4xl font-bold text-gray-900 dark:text-white">Signature Massage Services in Dubai</h2>
+      <p class="text-lg text-gray-700 dark:text-gray-300">Explore curated treatments, seasonal packages, and premium rituals crafted by our European therapists.</p>
+    </div>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
 <!-- Карточка 1 -->
 <div class="massage-card flex flex-col justify-between bg-white dark:bg-[#2b2b2b] rounded-xl shadow-md text-center p-6 transition-all duration-700 ease-out opacity-0 translate-y-10 h-full hover:shadow-xl hover:scale-[1.02] hover:-translate-y-1" data-animate="">
 <div>
@@ -671,7 +679,7 @@
   loading="lazy"
   style="object-position: 50% 30%;"
 />
-<h3 class="text-xl font-extrabold dark:text-white">Early Bird Offer</h3>
+<p class="text-xl font-extrabold dark:text-white">Early Bird Offer</p>
 <p class="text-2xl font-bold text-gray-800 dark:text-white my-2">AED 375</p>
 <p class="text-xs text-gray-500 dark:text-gray-400 mb-4">from 10 AM till 3 PM</p>
 <p class="text-sm text-gray-700 dark:text-gray-300 text-left leading-relaxed mb-4">
@@ -713,9 +721,8 @@
   loading="lazy"
   width="332"
   height="492"
-/> <h3 class="text-xl font-extrabold dark:text-white">
-                Swedish Massage
-              </h3>
+/> 
+  <p class="text-xl font-extrabold dark:text-white">Swedish Massage</p>
 <p class="text-sm text-gray-700 mt-7 dark:text-gray-300 text-left leading-relaxed">
                 
                  Experience timeless elegance through touch. Indulge in the
@@ -746,9 +753,7 @@
 <div class="massage-card w-[105%] flex flex-col justify-between bg-white dark:bg-[#2b2b2b] rounded-xl shadow-md text-center p-6 transition-all duration-700 ease-out opacity-0 translate-y-10 h-full hover:shadow-xl hover:scale-[1.02] hover:-translate-y-1" data-animate="">
 <div>
 <img width="800" height="600" alt="Six Hands Massage at Velvet Touch Spa" class="w-full h-[400px] object-cover object-top mb-4 rounded-2xl" loading="lazy" src="img/SixHandsMassage.webp"/>
-<h3 class="text-xl font-extrabold dark:text-white">
-                Six Hands Massage
-              </h3>
+<p class="text-xl font-extrabold dark:text-white">Six Hands Massage</p>
 <p class="text-sm text-gray-700 mt-5 dark:text-gray-300 text-left leading-relaxed">
                 Experience the pinnacle of indulgence with our luxurious 6-Hands
                 Massage — a synchronized treatment performed by three
@@ -785,9 +790,7 @@
 />
 
 
-<h3 class="text-xl font-extrabold dark:text-white">
-                Hot Stone Massage
-              </h3>
+<p class="text-xl font-extrabold dark:text-white">Hot Stone Massage</p>
 <p class="text-sm text-gray-700 mt-5 dark:text-gray-300 text-left leading-relaxed">
                Experience true luxury with our Hot Stone Massage — a premium
                 treatment delivered by expert therapists trained in high-end
@@ -816,9 +819,7 @@
 <div class="massage-card flex flex-col justify-between bg-white dark:bg-[#2b2b2b] rounded-xl shadow-md text-center p-6 transition-all duration-700 ease-out opacity-0 translate-y-10 h-full hover:shadow-xl hover:scale-[1.02] hover:-translate-y-1" data-animate="">
 <div>
 <img width="800" height="600" alt="Aromatherapy Massage at Velvet Touch Spa" class="w-full h-[400px] object-cover object-top mb-4 rounded-2xl" loading="lazy" src="img/tviktoriya.webp"/>
-<h3 class="text-xl font-extrabold dark:text-white">
-                Aromatherapy
-              </h3>
+<p class="text-xl font-extrabold dark:text-white">Aromatherapy</p>
 <p class="text-sm text-gray-700 dark:text-gray-300 mt-5 text-left leading-relaxed">
                 Where luxury meets the power of scent. Immerse yourself in a
                 sensory journey with our Aromatherapy Massage — a high-end
@@ -855,9 +856,7 @@
   loading="lazy"
 />
 
-<h3 class="text-xl font-extrabold dark:text-white">
-                Four Hands Massage
-              </h3>
+<p class="text-xl font-extrabold dark:text-white">Four Hands Massage</p>
 <p class="text-sm text-gray-700 mt-5 dark:text-gray-300 text-left leading-relaxed">
                 Twice the skill. Total luxury. Indulge in our exclusive Four
                 Hands Massage — a masterfully synchronized treatment performed
@@ -895,7 +894,7 @@
 />
 
 
-<h3 class="text-xl font-extrabold dark:text-white">Lomi Lomi</h3>
+<p class="text-xl font-extrabold dark:text-white">Lomi Lomi</p>
 <p class="text-sm text-gray-700 mt-5 dark:text-gray-300 text-left leading-relaxed">
                 The rhythm of serenity, delivered by expert hands. Experience
                 the ancient Hawaiian art of Lomi Lomi — a flowing, rhythmic
@@ -925,7 +924,7 @@
 <div class="massage-card flex flex-col justify-between bg-white dark:bg-[#2b2b2b] rounded-xl shadow-md text-center p-6 transition-all duration-700 ease-out opacity-0 translate-y-10 h-full hover:shadow-xl hover:scale-[1.02] hover:-translate-y-1" data-animate="">
 <div>
 <img width="800" height="600" alt="Thai Massage at Velvet Touch Spa" class="w-full h-[400px] object-cover object-top mb-4 rounded-2xl" loading="lazy" src="img/thai.webp"/>
-<h3 class="text-xl font-extrabold dark:text-white">Thai Massage</h3>
+<p class="text-xl font-extrabold dark:text-white">Thai Massage</p>
 <p class="text-sm text-gray-700 mt-5 dark:text-gray-300 text-left leading-relaxed">
                Traditional Thai Massage
 Rooted in centuries of Thai healing, this dynamic treatment blends acupressure, rhythmic compressions, and assisted yoga-style stretches. Working with palms, thumbs, elbows, and body weight, your therapist gently opens the joints, lengthens tight muscles, and activates energy lines from feet to head. The pace is steady and mindful, guiding the body into a deep release while improving flexibility, posture, and circulation.
@@ -947,7 +946,7 @@ Perfect for stiff backs, desk shoulders, or heavy legs, Thai Massage restores na
 <div class="massage-card flex flex-col justify-between bg-white dark:bg-[#2b2b2b] rounded-xl shadow-md text-center p-6 transition-all duration-700 ease-out opacity-0 translate-y-10 h-full hover:shadow-xl hover:scale-[1.02] hover:-translate-y-1" data-animate="">
 <div>
 <img width="800" height="600" alt="Deep Tissue Massage Velvet Touch Spa" class="w-full h-[400px] object-cover object-top mb-4 rounded-2xl" loading="lazy" src="img/yanadeep.webp"/>
-<h3 class="text-xl font-extrabold dark:text-white">Deep Tissue</h3>
+<p class="text-xl font-extrabold dark:text-white">Deep Tissue</p>
 <p class="text-sm text-gray-700 mt-5 dark:text-gray-300 text-left leading-relaxed">
                 Precision. Strength. Excellence. Discover the power of refined
                 touch with our Deep Tissue Massage — a high-performance
@@ -981,7 +980,7 @@ Perfect for stiff backs, desk shoulders, or heavy legs, Thai Massage restores na
       PACKAGE
     </p>
 <!-- Заголовок -->
-<h3 class="text-2xl font-extrabold mt-2 mb-4 text-black dark:text-white">5 Massages +1 Free</h3>
+<p class="text-2xl font-extrabold mt-2 mb-4 text-black dark:text-white">5 Massages +1 Free</p>
 <!-- Описание -->
 <p class="text-base text-gray-700 dark:text-gray-300 text-left leading-relaxed">
       Treat yourself to 6 sessions of pure aromatherapy bliss. When you purchase 5 luxurious massages, we gift you 1 additional session for free — crafted to restore, rejuvenate, and elevate your well-being.
@@ -1019,7 +1018,7 @@ Perfect for stiff backs, desk shoulders, or heavy legs, Thai Massage restores na
       PACKAGE
     </p>
 <!-- Заголовок -->
-<h3 class="text-2xl font-extrabold mt-2 mb-4 text-black dark:text-white">10 Massages +1 Free</h3>
+<p class="text-2xl font-extrabold mt-2 mb-4 text-black dark:text-white">10 Massages +1 Free</p>
 <!-- Описание -->
 <p class="text-base text-gray-700 dark:text-gray-300 text-left leading-relaxed">
       Commit to your wellness with ten aromatherapy massages and receive one free — our best long-term value. Use sessions over six months, share with a partner, or save them for travel recovery. 
@@ -1045,7 +1044,7 @@ Perfect for stiff backs, desk shoulders, or heavy legs, Thai Massage restores na
 <section class="py-16 bg-white dark:bg-[#1c1c1c]" id="dubai-massage-guide">
   <div class="max-w-5xl mx-auto px-4 space-y-8">
 <div class="text-center space-y-4">
-<h3 class="text-3xl font-bold text-gray-900 dark:text-white">Massage Treatments Tailored for Dubai Residents &amp; Visitors</h3>
+<h2 class="text-3xl font-bold text-gray-900 dark:text-white">Massage Treatments Tailored for Dubai Residents &amp; Visitors</h2>
 <p class="text-lg text-gray-700 dark:text-gray-300 leading-relaxed">
         Whether you are unwinding after a flight, preparing for an event, or gifting a partner, our European therapists curate
         signature spa journeys in the heart of JBR. Explore the guides below to find the ideal massage for stress release,
@@ -1087,10 +1086,10 @@ Perfect for stiff backs, desk shoulders, or heavy legs, Thai Massage restores na
 <!-- Facilities Section -->
 <section class="bg-white dark:bg-[#2b2b2b] py-16 px-4" id="facilities">
 <div class="max-w-7xl mx-auto">
-<h3 class="text-3xl md:text-4xl font-bold text-center text-gray-800 dark:text-white mb-12">
+<h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800 dark:text-white mb-12">
       Indulge in Complimentary Wellness Amenities<br/>
       Relax in Our Sauna, Jacuzzi, and Steam Room
-    </h3>
+    </h2>
 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
 <!-- 1 -->
 <div class="overflow-hidden rounded-xl shadow hover:scale-105 transition-transform duration-500">
@@ -1221,7 +1220,7 @@ Perfect for stiff backs, desk shoulders, or heavy legs, Thai Massage restores na
 <section>
 <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-32 items-center" id="about">
 <div>
-<p class="text-3xl font-bold text-gray-900 dark:text-white mb-4">Trusted Luxury in Every Touch</p>
+<h2 class="text-3xl font-bold text-gray-900 dark:text-white mb-4">Trusted Luxury in Every Touch</h2>
 <p class="text-gray-700 dark:text-gray-300 text-lg leading-relaxed mb-4">
         At Velvet Touch Spa, excellence is not just a promise — it’s our standard. 
         Our highly trained therapists deliver bespoke treatments using premium oils 
@@ -1316,7 +1315,7 @@ Perfect for stiff backs, desk shoulders, or heavy legs, Thai Massage restores na
 <section class="bg-white dark:bg-[#1c1c1c] py-16" id="faq">
   <div class="max-w-5xl mx-auto px-4 space-y-8">
 <div class="space-y-4 text-center">
-<h3 class="text-3xl font-bold text-gray-900 dark:text-white">Massage FAQ for Velvet Touch Spa Guests</h3>
+<h2 class="text-3xl font-bold text-gray-900 dark:text-white">Massage FAQ for Velvet Touch Spa Guests</h2>
 <p class="text-lg text-gray-700 dark:text-gray-300 leading-relaxed">
         Planning your first visit or returning for a signature treatment? These quick answers cover the essentials so you can
         book with confidence and maximise every minute inside our JBR sanctuary.
