Add Dubai Marina focused SEO content

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Luxury European Massage in JBR Dubai | Velvet Touch Spa</title>
-<meta name="description" content="Luxury European spa in JBR Dubai. Elite therapists, private suites and refined massage treatments for a truly elevated wellness experience.">
+<meta name="description" content="Luxury European spa in JBR and Dubai Marina. Elite therapists, private suites and refined massage treatments for guests searching for the best massage near Dubai Marina and The Walk.">
 <meta content="index, follow" name="robots"/>
 <meta content="Velvet Touch Spa" name="author"/>
 <link href="https://velvettouchspa.ae/" rel="canonical"/>
@@ -29,7 +29,7 @@
 <link href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" rel="stylesheet"/>
 <!-- Open Graph / Twitter -->
 <meta content="Luxury Massage in JBR Dubai from AED 375 | Velvet Touch Spa" property="og:title"/>
-<meta content="Premium European spa massage in JBR Dubai. 60/90 minutes from AED 375. Book now." property="og:description"/>
+<meta content="Premium European spa massage in JBR and Dubai Marina. 60/90 minutes from AED 375. Book the best massage near Dubai Marina today." property="og:description"/>
 <meta content="https://velvettouchspa.ae/" property="og:url"/>
 <meta content="https://velvettouchspa.ae/img/opengraph.webp" property="og:image"/>
 <meta content="website" property="og:type"/>
@@ -37,7 +37,7 @@
 <meta content="en_US" property="og:locale"/>
 <meta content="summary_large_image" name="twitter:card"/>
 <meta content="Luxury Massage in JBR Dubai from AED 375 | Velvet Touch Spa" name="twitter:title"/>
-<meta content="Premium European spa massage in JBR Dubai. 60/90 minutes from AED 375." name="twitter:description"/>
+<meta content="Premium European spa massage in JBR and Dubai Marina. 60/90 minutes from AED 375." name="twitter:description"/>
 <meta content="https://velvettouchspa.ae/img/opengraph.webp" name="twitter:image"/>
 <!-- Swiper JS & main scripts (deferred) -->
 <script defer="" src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -95,6 +95,7 @@
         "https://linktr.ee/velvettouchspa",
         "https://www.tripadvisor.com/Attraction_Review-g295424-d33119461-Reviews-Velvet_Touch_European_Spa-Dubai_Emirate_of_Dubai.html"
       ],
+      "areaServed": ["Dubai", "Dubai Marina", "JBR"],
       "contactPoint": [{
         "@type": "ContactPoint",
         "contactType": "customer service",
@@ -109,7 +110,7 @@
       "@id": "https://velvettouchspa.ae/#aromatherapy",
       "serviceType": "Aromatherapy",
       "provider": { "@id": "https://velvettouchspa.ae/#dayspa" },
-      "areaServed": "Dubai",
+      "areaServed": ["Dubai", "Dubai Marina", "JBR"],
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
         "name": "Aromatherapy Prices",
@@ -124,7 +125,7 @@
       "@id": "https://velvettouchspa.ae/#swedish",
       "serviceType": "Swedish Massage",
       "provider": { "@id": "https://velvettouchspa.ae/#dayspa" },
-      "areaServed": "Dubai",
+      "areaServed": ["Dubai", "Dubai Marina", "JBR"],
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
         "name": "Swedish Massage Prices",
@@ -139,7 +140,7 @@
       "@id": "https://velvettouchspa.ae/#lomilomi",
       "serviceType": "Lomi Lomi",
       "provider": { "@id": "https://velvettouchspa.ae/#dayspa" },
-      "areaServed": "Dubai",
+      "areaServed": ["Dubai", "Dubai Marina", "JBR"],
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
         "name": "Lomi Lomi Prices",
@@ -154,7 +155,7 @@
       "@id": "https://velvettouchspa.ae/#deeptissue",
       "serviceType": "Deep Tissue",
       "provider": { "@id": "https://velvettouchspa.ae/#dayspa" },
-      "areaServed": "Dubai",
+      "areaServed": ["Dubai", "Dubai Marina", "JBR"],
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
         "name": "Deep Tissue Prices",
@@ -169,7 +170,7 @@
       "@id": "https://velvettouchspa.ae/#hotstone",
       "serviceType": "Hot Stone",
       "provider": { "@id": "https://velvettouchspa.ae/#dayspa" },
-      "areaServed": "Dubai",
+      "areaServed": ["Dubai", "Dubai Marina", "JBR"],
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
         "name": "Hot Stone Prices",
@@ -184,7 +185,7 @@
       "@id": "https://velvettouchspa.ae/#fourhands",
       "serviceType": "Four Hands",
       "provider": { "@id": "https://velvettouchspa.ae/#dayspa" },
-      "areaServed": "Dubai",
+      "areaServed": ["Dubai", "Dubai Marina", "JBR"],
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
         "name": "Four Hands Prices",
@@ -199,7 +200,7 @@
       "@id": "https://velvettouchspa.ae/#sixhands",
       "serviceType": "Six Hands",
       "provider": { "@id": "https://velvettouchspa.ae/#dayspa" },
-      "areaServed": "Dubai",
+      "areaServed": ["Dubai", "Dubai Marina", "JBR"],
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
         "name": "Six Hands Prices",
@@ -214,7 +215,7 @@
       "@id": "https://velvettouchspa.ae/#facial",
       "serviceType": "Facial Care",
       "provider": { "@id": "https://velvettouchspa.ae/#dayspa" },
-      "areaServed": "Dubai",
+      "areaServed": ["Dubai", "Dubai Marina", "JBR"],
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
         "name": "Facial Care Prices",
@@ -340,7 +341,8 @@
   </script>
 <!-- Trustpilot (load once) -->
 <script async="" src="https://widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js"></script>
-<meta content="best russian spa in dubai, dubai european massage, european spa dubai, jbr massage centre, luxury massage dubai, massage center in dubai jbr, massage dubai marina, massage jbr, russian spa in dubai, spa in jbr" name="keywords"/></head>
+<meta content="spa in Dubai Marina, massage near Dubai Marina, spa in JBR, massage near JBR, best massage Dubai Marina, luxury spa JBR Dubai, European spa Dubai Marina, couples massage Dubai Marina, private spa suites JBR, Russian massage therapists Dubai Marina" name="keywords"/>
+</head>
 <body class="font-playfair overflow-x-hidden scroll-smooth bg-[#f5f3ee] text-black dark:bg-corinthia dark:text-white transition-colors duration-300" id="top">
 
 <!-- Google Tag Manager (noscript) -->
@@ -420,10 +422,10 @@
 <img width="800" height="600" alt="Healing Touch Massage" class="absolute inset-0 w-full h-full object-cover" loading="lazy" src="img/main2.webp"/>
 <div class="relative z-10 flex flex-col justify-center items-center h-full text-center px-4 bg-white/20 dark:bg-black/40 text-black dark:text-white">
 <h1 class="text-2xl sm:text-3xl md:text-5xl lg:text-6xl font-serif font-semibold leading-tight mb-4">
-          Luxury European Massage Therapies in JBR Dubai
+          Luxury European Massage Therapies in JBR &amp; Dubai Marina
 </h1>
 <p class="text-sm sm:text-base md:text-lg text-gray-800 dark:text-gray-300">
-          Where elegance meets deep relaxation
+          Where elegance meets deep relaxation steps from Dubai Marina Mall
         </p>
 </div>
 </div>
@@ -444,7 +446,7 @@
 <img width="800" height="600" alt="Premium Spa Journey" class="absolute inset-0 w-full h-full object-cover" loading="lazy" src="img/main3.webp"/>
 <div class="relative z-10 flex flex-col justify-center items-center h-full text-center px-4 bg-white/20 dark:bg-black/40 text-black dark:text-white">
 <p class="text-2xl sm:text-3xl md:text-5xl lg:text-6xl font-serif font-semibold leading-tight mb-4">
-          A Premium Spa Journey in Dubai
+          A Premium Spa Journey in Dubai Marina
         </p>
 <p class="text-sm sm:text-base md:text-lg text-gray-800 dark:text-gray-300">
           For those who value luxury and comfort
@@ -480,11 +482,42 @@
 <section class="w-full h-[400px] bg-[#5e5c5a] flex flex-col items-center justify-center text-center px-4">
 <img width="800" height="600" alt="Velvet Touch Logo" class="h-3/5 object-contain mb-4" loading="lazy" src="img/logo.webp"/>
 <h2 class="text-base sm:text-lg md:text-xl font-light tracking-widest uppercase text-white leading-tight">
-    European Spa Sanctuary with Complimentary Valet Parking
+    European Spa Sanctuary in Dubai Marina with Complimentary Valet Parking
   </h2>
 <div class="bg-black py-3 px-6 rounded-full inline-block mt-4">
 <p class="text-white text-xl font-semibold">Complimentary Valet Parking</p>
 </div>
+</section>
+<section class="py-16 bg-white dark:bg-[#1f1f1f]" id="dubai-marina-keywords">
+  <div class="max-w-5xl mx-auto px-6">
+    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 dark:text-white text-center">Spa Massage Near Dubai Marina &amp; JBR</h2>
+    <p class="mt-6 text-lg text-gray-700 dark:text-gray-300 text-center">
+      Located inside Ramada Hotel &amp; Suites on The Walk, our therapists welcome residents and travellers
+      searching for a <strong>spa in Dubai Marina</strong>, a <strong>massage near JBR</strong>, or a discreet
+      private suite close to Bluewaters Island. Complimentary valet parking and late-night availability make
+      it easy to book a session after work or before a beach day.
+    </p>
+    <div class="mt-8 grid grid-cols-1 sm:grid-cols-2 gap-6">
+      <div class="bg-[#f8f5f0] dark:bg-[#2b2b2b] rounded-2xl p-6 shadow-sm">
+        <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4">Popular location searches</h3>
+        <ul class="list-disc list-inside space-y-2 text-gray-700 dark:text-gray-300">
+          <li>spa in Dubai Marina</li>
+          <li>massage near Dubai Marina</li>
+          <li>spa in JBR</li>
+          <li>massage near JBR</li>
+          <li>best massage Dubai Marina</li>
+        </ul>
+      </div>
+      <div class="bg-[#f8f5f0] dark:bg-[#2b2b2b] rounded-2xl p-6 shadow-sm">
+        <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4">Neighbourhood highlights</h3>
+        <p class="text-gray-700 dark:text-gray-300 leading-relaxed">
+          We are minutes from Dubai Marina Mall, Address Beach Resort, and Bluewaters Island, making it convenient
+          to combine a visit with waterfront dining or yacht cruises. Guests often book our couples aromatherapy
+          ritual when planning staycations or celebrating special occasions near Jumeirah Beach Residence.
+        </p>
+      </div>
+    </div>
+  </div>
 </section>
 <!-- SECTION -->
 <section class="py-16 bg-[#f8f5f0] dark:bg-[#2b2b2b] transition-colors duration-300">
@@ -505,7 +538,7 @@
 <p class="mt-6 md:mt-8 text-white/70 text-lg md:text-2xl max-w-4xl mx-auto">
       We take pride in our team of experienced Russian and Ukrainian massage
       therapists. Their certifications and dedication to their craft ensure you
-      receive the best possible massage in Dubai.
+      receive the best possible massage in Dubai Marina and JBR.
     </p>
 </div>
 </section>
@@ -514,7 +547,7 @@
   <div class="max-w-7xl mx-auto px-4 relative">
     <div class="mb-12 text-center space-y-4">
       <h2 class="text-3xl md:text-4xl font-bold text-gray-900 dark:text-white">Our European Massage Therapists</h2>
-      <p class="text-lg text-gray-700 dark:text-gray-300 max-w-3xl mx-auto">Meet the professionals delivering our signature spa rituals in JBR. Each therapist blends European techniques with personalised care.</p>
+      <p class="text-lg text-gray-700 dark:text-gray-300 max-w-3xl mx-auto">Meet the professionals delivering our signature spa rituals in JBR and Dubai Marina. Each therapist blends European techniques with personalised care for waterfront residents and hotel guests.</p>
     </div>
     <div class="relative">
 <button aria-label="Previous therapist" class="therapist-nav-btn therapist-nav-btn--prev" id="therapist-prev" type="button">
